--- a/arch/arm/configs/cyanogenmod_tenderloin4g_defconfig
+++ b/arch/arm/configs/cyanogenmod_tenderloin4g_defconfig
@@ -88,7 +88,7 @@ CONFIG_RCU_FANOUT=32
 # CONFIG_RCU_BOOST is not set
 CONFIG_IKCONFIG=y
 CONFIG_IKCONFIG_PROC=y
-CONFIG_LOG_BUF_SHIFT=17
+CONFIG_LOG_BUF_SHIFT=20
 CONFIG_CGROUPS=y
 # CONFIG_CGROUP_DEBUG is not set
 CONFIG_CGROUP_FREEZER=y
@@ -487,7 +487,7 @@ CONFIG_MSM_RMT_STORAGE_CLIENT=y
 CONFIG_MSM_DALRPC=y
 # CONFIG_MSM_DALRPC_TEST is not set
 CONFIG_MSM_CPU_FREQ_SET_MIN_MAX=y
-CONFIG_MSM_CPU_FREQ_MAX=1188000
+CONFIG_MSM_CPU_FREQ_MAX=1512000
 CONFIG_MSM_CPU_FREQ_MIN=192000
 # CONFIG_MSM_AVS_HW is not set
 # CONFIG_MSM_HW3D is not set
@@ -501,6 +501,7 @@ CONFIG_MSM8X60_AUDIO=y
 # CONFIG_MSM_DMA_TEST is not set
 # CONFIG_WIFI_CONTROL_FUNC is not set
 # CONFIG_SURF_FFA_GPIO_KEYPAD is not set
+CONFIG_MSM_UARTDM=y
 CONFIG_MSM_SLEEP_TIME_OVERRIDE=y
 # CONFIG_MSM_MEMORY_LOW_POWER_MODE is not set
 CONFIG_MSM_PM_TIMEOUT_HALT=y
@@ -810,31 +811,31 @@ CONFIG_PACKET=y
 CONFIG_UNIX=y
 # CONFIG_UNIX_DIAG is not set
 CONFIG_XFRM=y
-# CONFIG_XFRM_USER is not set
+CONFIG_XFRM_USER=y
 # CONFIG_XFRM_SUB_POLICY is not set
-# CONFIG_XFRM_MIGRATE is not set
+CONFIG_XFRM_MIGRATE=y
 # CONFIG_XFRM_STATISTICS is not set
 CONFIG_XFRM_IPCOMP=y
 CONFIG_NET_KEY=y
-# CONFIG_NET_KEY_MIGRATE is not set
+CONFIG_NET_KEY_MIGRATE=y
 CONFIG_INET=y
-# CONFIG_IP_MULTICAST is not set
+CONFIG_IP_MULTICAST=y
 CONFIG_IP_ADVANCED_ROUTER=y
 # CONFIG_IP_FIB_TRIE_STATS is not set
 CONFIG_IP_MULTIPLE_TABLES=y
-# CONFIG_IP_ROUTE_MULTIPATH is not set
+CONFIG_IP_ROUTE_MULTIPATH=y
 # CONFIG_IP_ROUTE_VERBOSE is not set
 CONFIG_IP_ROUTE_CLASSID=y
 CONFIG_IP_PNP=y
 CONFIG_IP_PNP_DHCP=y
 CONFIG_IP_PNP_BOOTP=y
 CONFIG_IP_PNP_RARP=y
-# CONFIG_NET_IPIP is not set
+CONFIG_NET_IPIP=y
 # CONFIG_NET_IPGRE_DEMUX is not set
 # CONFIG_ARPD is not set
 # CONFIG_SYN_COOKIES is not set
 # CONFIG_INET_AH is not set
-# CONFIG_INET_ESP is not set
+CONFIG_INET_ESP=y
 CONFIG_INET_IPCOMP=y
 CONFIG_INET_XFRM_TUNNEL=y
 CONFIG_INET_TUNNEL=y
@@ -846,7 +847,7 @@ CONFIG_INET_DIAG=y
 CONFIG_INET_TCP_DIAG=y
 # CONFIG_INET_UDP_DIAG is not set
 CONFIG_TCP_CONG_ADVANCED=y
-# CONFIG_TCP_CONG_BIC is not set
+CONFIG_TCP_CONG_BIC=m
 CONFIG_TCP_CONG_CUBIC=y
 # CONFIG_TCP_CONG_WESTWOOD is not set
 # CONFIG_TCP_CONG_HTCP is not set
@@ -952,13 +953,13 @@ CONFIG_NETFILTER_XT_TARGET_MARK=y
 CONFIG_NETFILTER_XT_TARGET_NFLOG=y
 CONFIG_NETFILTER_XT_TARGET_NFQUEUE=y
 # CONFIG_NETFILTER_XT_TARGET_NOTRACK is not set
-# CONFIG_NETFILTER_XT_TARGET_RATEEST is not set
-# CONFIG_NETFILTER_XT_TARGET_TEE is not set
-# CONFIG_NETFILTER_XT_TARGET_TPROXY is not set
-# CONFIG_NETFILTER_XT_TARGET_TRACE is not set
+CONFIG_NETFILTER_XT_TARGET_RATEEST=y
+CONFIG_NETFILTER_XT_TARGET_TEE=y
+CONFIG_NETFILTER_XT_TARGET_TPROXY=y
+CONFIG_NETFILTER_XT_TARGET_TRACE=y
 # CONFIG_NETFILTER_XT_TARGET_SECMARK is not set
 CONFIG_NETFILTER_XT_TARGET_TCPMSS=y
-# CONFIG_NETFILTER_XT_TARGET_TCPOPTSTRIP is not set
+CONFIG_NETFILTER_XT_TARGET_TCPOPTSTRIP=y
 
 #
 # Xtables matches
@@ -1069,7 +1070,7 @@ CONFIG_IP6_NF_MATCH_RT=y
 CONFIG_IP6_NF_TARGET_HL=y
 CONFIG_IP6_NF_FILTER=y
 CONFIG_IP6_NF_TARGET_REJECT=y
-# CONFIG_IP6_NF_TARGET_REJECT_SKERR is not set
+CONFIG_IP6_NF_TARGET_REJECT_SKERR=y
 CONFIG_IP6_NF_MANGLE=y
 CONFIG_IP6_NF_RAW=y
 # CONFIG_IP6_NF_SECURITY is not set
@@ -1083,7 +1084,9 @@ CONFIG_L2TP=y
 CONFIG_L2TP_V3=y
 CONFIG_L2TP_IP=y
 CONFIG_L2TP_ETH=y
-# CONFIG_BRIDGE is not set
+CONFIG_STP=y
+CONFIG_BRIDGE=y
+# CONFIG_BRIDGE_IGMP_SNOOPING is not set
 # CONFIG_NET_DSA is not set
 # CONFIG_VLAN_8021Q is not set
 # CONFIG_DECNET is not set
@@ -1283,6 +1286,7 @@ CONFIG_BLK_DEV_RAM_SIZE=65536
 CONFIG_ANDROID_PMEM=y
 # CONFIG_ATMEL_PWM is not set
 # CONFIG_ICS932S401 is not set
+CONFIG_HSUART=y
 # CONFIG_ENCLOSURE_SERVICES is not set
 # CONFIG_APDS9802ALS is not set
 # CONFIG_ISL29003 is not set
@@ -1512,6 +1516,7 @@ CONFIG_SLHC=y
 CONFIG_SLIP_COMPRESSED=y
 # CONFIG_SLIP_SMART is not set
 CONFIG_SLIP_MODE_SLIP6=y
+CONFIG_WLAN=y
 
 #
 # USB Network Adapters
@@ -1533,7 +1538,7 @@ CONFIG_USB_NET_CDC_NCM=y
 # CONFIG_USB_NET_PLUSB is not set
 # CONFIG_USB_NET_MCS7830 is not set
 # CONFIG_USB_NET_RNDIS_HOST is not set
-# CONFIG_USB_NET_CDC_SUBSET is not set
+CONFIG_USB_NET_CDC_SUBSET=y
 # CONFIG_USB_NET_ZAURUS is not set
 # CONFIG_USB_NET_CX82310_ETH is not set
 # CONFIG_USB_NET_KALMIA is not set
@@ -1565,6 +1570,9 @@ CONFIG_ATH6KL_DEBUG=y
 #
 # Enable WiMAX (Networking options) to see the WiMAX drivers
 #
+# CONFIG_USB_SIERRA_NET is not set
+CONFIG_USB_SIERRA_NET_SWI=y
+CONFIG_USB_NET_HW_CDC=y
 # CONFIG_WAN is not set
 # CONFIG_ISDN is not set
 
@@ -1612,6 +1620,7 @@ CONFIG_INPUT_KEYBOARD=y
 # CONFIG_KEYBOARD_OMAP4 is not set
 # CONFIG_KEYBOARD_XTKBD is not set
 # CONFIG_KEYBOARD_QCIKBD is not set
+CONFIG_KEYBOARD_GPIO_PE=y
 # CONFIG_INPUT_MOUSE is not set
 # CONFIG_INPUT_JOYSTICK is not set
 # CONFIG_INPUT_TABLET is not set
@@ -2766,11 +2775,14 @@ CONFIG_USB_SERIAL=y
 # CONFIG_USB_SERIAL_SAFE is not set
 # CONFIG_USB_SERIAL_SIEMENS_MPI is not set
 # CONFIG_USB_SERIAL_SIERRAWIRELESS is not set
+CONFIG_USB_SERIAL_SIERRAWIRELESS_SWI=y
 # CONFIG_USB_SERIAL_SYMBOL is not set
 # CONFIG_USB_SERIAL_TI is not set
 # CONFIG_USB_SERIAL_CYBERJACK is not set
 # CONFIG_USB_SERIAL_XIRCOM is not set
+CONFIG_USB_SERIAL_WWAN=y
 # CONFIG_USB_SERIAL_OPTION is not set
+# CONFIG_USB_SERIAL_OPTION_HUAWEI is not set
 # CONFIG_USB_SERIAL_OMNINET is not set
 # CONFIG_USB_SERIAL_OPTICON is not set
 # CONFIG_USB_SERIAL_VIVOPAY_SERIAL is not set
