--- a/arch/arm/configs/cyanogenmod_tenderloin4g_defconfig
+++ b/arch/arm/configs/cyanogenmod_tenderloin4g_defconfig
@@ -1286,7 +1286,6 @@ CONFIG_BLK_DEV_RAM_SIZE=65536
 CONFIG_ANDROID_PMEM=y
 # CONFIG_ATMEL_PWM is not set
 # CONFIG_ICS932S401 is not set
-CONFIG_HSUART=y
 # CONFIG_ENCLOSURE_SERVICES is not set
 # CONFIG_APDS9802ALS is not set
 # CONFIG_ISL29003 is not set
@@ -2457,7 +2456,7 @@ CONFIG_FB_MSM_OVERLAY=y
 # CONFIG_FB_MSM_MIPI_CHIMEI_WUXGA is not set
 # CONFIG_FB_MSM_MIPI_SIMULATOR_VIDEO is not set
 # CONFIG_FB_MSM_NO_MDP_PIPE_CTRL is not set
-# CONFIG_FB_MSM_OVERLAY0_WRITEBACK is not set
+# CONFIG_FB_MSM_OVERLAY0_WRITEBACK=y
 # CONFIG_FB_MSM_OVERLAY1_WRITEBACK is not set
 # CONFIG_FB_MSM_WRITEBACK_MSM_PANEL is not set
 # CONFIG_FB_MSM_LCDC_PRISM_WVGA_PANEL is not set
@@ -2837,6 +2836,7 @@ CONFIG_USB_GADGET_STORAGE_NUM_BUFFERS=2
 # CONFIG_USB_CI13XXX_MSM is not set
 # CONFIG_USB_CI13XXX_MSM_HSIC is not set
 # CONFIG_USB_DWC3_MSM is not set
+CONFIG_USB_GADGET_MSM_72K=y
 CONFIG_USB_MSM_72K=y
 # CONFIG_USB_DUMMY_HCD is not set
 CONFIG_USB_GADGET_DUALSPEED=y
