--- a/arch/arm/configs/cyanogenmod_tenderloin4g_defconfig
+++ b/arch/arm/configs/cyanogenmod_tenderloin4g_defconfig
@@ -1554,7 +1554,7 @@ CONFIG_USB_NET_CDC_SUBSET=y
 # CONFIG_LIBRA_SDIOIF is not set
 # CONFIG_ATH6K_LEGACY_EXT is not set
 CONFIG_ATH_COMMON=y
-# CONFIG_ATH_DEBUG is not set
+CONFIG_ATH_DEBUG=y
 CONFIG_ATH6KL=y
 CONFIG_ATH6KL_SDIO=y
 # CONFIG_ATH6KL_USB is not set
