--- a/arch/arm/configs/cyanogenmod_tenderloin4g_defconfig
+++ b/arch/arm/configs/cyanogenmod_tenderloin4g_defconfig
@@ -182,7 +182,7 @@ CONFIG_HAVE_GENERIC_DMA_COHERENT=y
 CONFIG_SLABINFO=y
 CONFIG_RT_MUTEXES=y
 CONFIG_BASE_SMALL=0
-CONFIG_MODULES=y
+# CONFIG_MODULES is not set
 CONFIG_STOP_MACHINE=y
 CONFIG_BLOCK=y
 CONFIG_LBDAF=y
@@ -2453,7 +2453,7 @@ CONFIG_FB_MSM_OVERLAY=y
 # CONFIG_FB_MSM_MIPI_CHIMEI_WUXGA is not set
 # CONFIG_FB_MSM_MIPI_SIMULATOR_VIDEO is not set
 # CONFIG_FB_MSM_NO_MDP_PIPE_CTRL is not set
-# CONFIG_FB_MSM_OVERLAY0_WRITEBACK=y
+# CONFIG_FB_MSM_OVERLAY0_WRITEBACK is not set
 # CONFIG_FB_MSM_OVERLAY1_WRITEBACK is not set
 # CONFIG_FB_MSM_WRITEBACK_MSM_PANEL is not set
 # CONFIG_FB_MSM_LCDC_PRISM_WVGA_PANEL is not set
@@ -2833,7 +2833,7 @@ CONFIG_USB_GADGET_STORAGE_NUM_BUFFERS=2
 # CONFIG_USB_CI13XXX_MSM is not set
 # CONFIG_USB_CI13XXX_MSM_HSIC is not set
 # CONFIG_USB_DWC3_MSM is not set
-CONFIG_USB_GADGET_MSM_72K=y
+# CONFIG_USB_GADGET_MSM_72K is not set
 CONFIG_USB_MSM_72K=y
 # CONFIG_USB_DUMMY_HCD is not set
 CONFIG_USB_GADGET_DUALSPEED=y
