defconfig: misc reverts

--- a/arch/arm/configs/cyanogenmod_tenderloin4g_defconfig
+++ b/arch/arm/configs/cyanogenmod_tenderloin4g_defconfig
@@ -1459,7 +1459,7 @@ CONFIG_NET_VENDOR_I825XX=y
 CONFIG_NET_VENDOR_MARVELL=y
 CONFIG_NET_VENDOR_MICREL=y
 # CONFIG_KS8851_MLL is not set
-CONFIG_MSM_RMNET=y
+# CONFIG_MSM_RMNET is not set
 # CONFIG_MSM_RMNET_DEBUG is not set
 # CONFIG_QFEC is not set
 CONFIG_NET_VENDOR_NATSEMI=y
@@ -1554,7 +1554,7 @@ CONFIG_USB_NET_CDC_SUBSET=y
 # CONFIG_LIBRA_SDIOIF is not set
 # CONFIG_ATH6K_LEGACY_EXT is not set
 CONFIG_ATH_COMMON=y
-CONFIG_ATH_DEBUG=y
+# CONFIG_ATH_DEBUG is not set
 CONFIG_ATH6KL=y
 CONFIG_ATH6KL_SDIO=y
 # CONFIG_ATH6KL_USB is not set
